# Player-Stage-Manual

./: README.md  conf.py  index.md  index.rst  mkdocs.yml
code/: install.sh
code/Ch10.1/: 067_playsound.def  Makefile  client.c  dev_playsound.c  simple.cfg
code/Ch11.1/: CMakeLists.txt  Makefile  soxplayer.cc  soxplayer.h
code/Ch11.2/: CMakeLists.txt  soxplayer-test.cc  soxplayer.cfg
code/Ch11.3/: CMakeLists.txt
code/Ch11.4/: CMakeLists.txt
code/Ch6.1/: Makefile
code/Ch6.3/: bigbob12  bigbob12.cc  bigbob13  bigbob13.cc
code/Ch6.6/: .bigbob2b.cc.swp  bigbob2a  bigbob2a.cc  bigbob2b
code/Ch7.1/: Makefile
code/Ch7.3/: bigbob11  bigbob11.cfg  bigbob11.world  bigbob12  bigbob12.c  bigbob13  bigbob13.c  bigbob7.cfg  bigbob7.world  bigbob8  bigbob9.c
code/Ch7.6/: bigbob2  bigbob2b
code/Ch8.1/: example0.py
code/Ch8.2/: bigbob10.py
code/Ch8.3/: bigbob11.py  bigbob12.py  bigbob12c.py  bigbob13.py  bigbob8.py  bigbob9.py
code/Ch8.5/: fids.py
code/Ch8.6/: bigbob2a.py  bigbob2b.py
code/Ch9.1/: simple.py
code/Ch9.3/: bigbob10_c.py  bigbob11_c.py  bigbob12_c.py  bigbob13_c.py  bigbob9_c.py
code/Ch9.6/: bigbob2a_c.py  bigbob2b_c.py
docs/: BASICS.md  BASICS.rst  CFGFILES.md  CFGFILES.rst  CONTROLLERS.md  CONTROLLERS.rst  CONTROLLER_C.md  CONTROLLER_C.rst  CONTROLLER_CPP.md  CONTROLLER_CPP.rst  CONTROLLER_PY.md  CONTROLLER_PYC.md  CONTROLLER_PYC.rst  CONTROLLER_PYCPP.md  CONTROLLER_PYCPP.rst  DRIVERS.md  DRIVERS.rst  INTERFACES.md  INTERFACES.rst  INTRO.md  INTRO.rst  None.md  None.rst  WORLDFILES.md  WORLDFILES.rst  index.md  index.rst
(+5 files in other folders)
